--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,14 @@ services:
       - "3306:3306"
     volumes:
       - mysqldata:/var/lib/mysql
+      
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+    command: redis-server --save 60 1 --loglevel warning
 
   app:
     build:
@@ -21,12 +29,16 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - redis
     environment:
       DB_HOST: db
       DB_PORT: 3306
       DB_USERNAME: mysql
       DB_PASSWORD: password
       DB_DATABASE: momos
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
 
 volumes:
   mysqldata:
+  redisdata:
