--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,13 +36,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
     depends_on:
       db:
         condition: service_healthy
       redis:
         condition: service_healthy
+    deploy:
+      replicas: 4
+      restart_policy:
+        condition: on-failure
+    expose:
+      - "3000"
     environment:
       NODE_ENV: development
       DB_HOST: db
@@ -70,6 +74,14 @@ services:
         condition: service_healthy
     networks:
       - default
+  load_balancer:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
 
 volumes:
   mysqldata:
